--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@reduxjs/toolkit": "^2.6.1",
     "antd": "^5.24.3",
     "axios": "^1.8.3",
+    "connected-react-router": "^6.9.3",
+    "history": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
