--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
-    "antd": "^5.24.3",
+    "antd": "^5.20.1",
     "axios": "^1.8.3",
     "connected-react-router": "^6.9.3",
+    "dayjs": "^1.11.13",
     "history": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
