--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connected-react-router": "^6.9.3",
     "dayjs": "^1.11.13",
     "history": "^5.3.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
