--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
+    "react-vertical-timeline-component": "^3.5.3",
     "redux": "^5.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-persist": "^6.0.0",
